--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,24 +1,27 @@
 <link
   rel="apple-touch-icon"
   sizes="180x180"
-  href="assets/favicon/apple-touch-icon.png"
+  href="https://sonG1031.github.io/assets/favicon/apple-touch-icon.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="32x32"
-  href="assets/favicon/favicon-32x32.png"
+  href="https://sonG1031.github.io/assets/favicon/favicon-32x32.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="16x16"
-  href="assets/favicon/favicon-16x16.png"
+  href="https://sonG1031.github.io/assets/favicon/favicon-16x16.png"
 />
-<link rel="manifest" href="assets/favicon/site.webmanifest" />
+<link
+  rel="manifest"
+  href="https://sonG1031.github.io/assets/favicon/site.webmanifest"
+/>
 <link
   rel="mask-icon"
-  href="assets/favicon/safari-pinned-tab.svg"
+  href="https://sonG1031.github.io/assets/favicon/safari-pinned-tab.svg"
   color="#b40000"
 />
 <meta name="msapplication-TileColor" content="#b40000" />
